<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz</string>
    <string name="completed">Congratulations! \n You have completed the level.</string>
    <string name="not_completed">Oops! \n Level not completed.Play again! </string>
    <string name="select_level">Select Level</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select Sub Category</string>
    <string name="more_app">More Apps</string>
    <string name="about_us">About Us</string>
    <string name="sound">Sound</string>
    <string name="share_app">Share App</string>
    <string name="vibration">Vibration</string>
    <string name="rateapp">Rate Us</string>
    <string name="bg_music">Background Music</string>
    <string name="share_via">Share via</string>
    <string name="share_subject">I like Cricket Quiz Game</string>
    <string name="achievement">Achievement</string>
    <string name="next_play">Play Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Home</string>
    <string name="review_answer">Review Answers</string>
    <string name="share_score">Share Your Score</string>
    <string name="action_settings">Settings</string>
    <string name="play_next">Play Again</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="instruction">Instruction</string>
    <string name="rank_1">1</string>
    <string name="rank_2">2</string>
    <string name="rank_3">3</string>
    <string name="msg_no_internet">No internet connection!</string>
    <string name="no_category">sub category not available!</string>
    <string name="no_sub_category">sub category not available!</string>
    <string name="no_enough_question">Not enough questions, to play level.</string>
    <string name="retry">RETRY</string>
    <string name="title">Title</string>
    <string name="bm_empty_msg">bookmark not available</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="answer">answer</string>
    <string name="extra_note">Extra Note</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="report">Report Question</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="title_already_used">Life Line Already Used !</string>
    <string name="msg_lifeline_used">You can use only once per level</string>
    <string name="try_again">Try Again</string>
    <string name="zero">0</string>
    <string name="loading">Loading…</string>

    <string name="level_not_available">level not available</string>

    <string name="msg_enough_coin">Not Enough Coins !</string>
    <string name="coin_message">You don\'t have enough coins. You need at least 4 coins to use this lifeline.</string>
    <string name="coin_message_sub">Watch a short video &amp; get free coins</string>
    <string name="skip_btn_message">SKIP. I DON\'T NEED COINS</string>
    <string name="msg_watch_video">WATCH NOW</string>
    <string name="total_score">Total Score</string>
    <string name="total_coins">Total Coins</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="report_hint">Type a message</string>
    <string name="pg_dialog_title">\u25CF Please wait&#8230;your pdf report is generating&#8230;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="level_pre_text">Level :</string>
    <string name="exit_msg">Do you want to exit the level?</string>
    <string name="bookmark_play">Play Bookmark</string>
    <string name="all_complete_msg">You have Completed All Questions !</string>


    <!--instruction  messages-->
    <string name="how_to_play">How To Play Quiz</string>
    <string name="has_option">Quiz game has 4 options</string>
    <string name="msg_right">For each right answer 5 points will be given.</string>
    <string name="msg_wrong">minus 2 points for each question</string>
    <string name="msg_lifeline">Use of Lifeline  : You can use only once per level</string>
    <string name="msg_fifty_fifty">50 – 50 : for remove two option out of Four(deduct 4 coins ).</string>
    <string name="msg_skip">Skip question: you can pass question without minus points(deduct 2 coins).</string>
    <string name="msg_opinion">Audience poll: use audience paul for check other users choose option(deduct 4 coins).</string>
    <string name="msg_reset">Reset timer: Reset timer again if you needed more time score (deduct 2 coins).</string>
    <string name="msg_leaderboard">You can compare your score with other users of apps</string>
    <string name="msg_achievement">You can achieved Achievement and level</string>
    <string name="leaderboard">LeaderBoard</string>


    <string name="textsize_dialog_lbl_fontsize">Font Size</string>
    <string name="font_size">Font Size</string>
    <string name="level_locked">Level is Locked</string>
    <string name="login">LogIn</string>

    <string name="msg_play_guest">OR You Can</string>
    <string name="logout_warning">Do you really want to log out?</string>
    <string name="update_profile">Update Profile</string>
    <string name="leader_board">Leaderboard</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="update">Update</string>

    <string name="privacy_terms">Privacy Policy</string>


    <!--Strings for battle-->
    <string name="matching_opponent">Matching Opponent</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="exit">Quit</string>
    <string name="play_with_computer">PLAY WITH ROBOT </string>
    <string name="congrats">Congratulation</string>
    <string name="next_time">Batter Luck Next Time!</string>
    <string name="robot">Robot</string>
    <string name="user_not_available_please_try_after_some_time">Oops! \n Player not available for battle!!</string>
    <string name="alert_msg">Oops! \n Something went wrong. please try again in sometime </string>
    <string name="start_battle">START BATTLE</string>
    <string name="player_available">\n player available for battle</string>
<string name="question_not_available">Question Not Available</string>
<string name="leave_battle_txt"> has leave the game.</string>
    <!--facebook appId for login-->
    <string name="facebook_app_id">781335815555088</string>
    <string name="fb_login_protocol_scheme">fb781335815555088</string>


    <!--Ad Mob Id-->
    <string name="adAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_Rewarded_Video_Ads">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>