<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.cricket.quiz.fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/new_bg">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/update_profile"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_below="@+id/topLayout"
            android:background="@drawable/drop_shadow" />

        <RelativeLayout
            android:id="@+id/imgLayout"
            android:layout_width="@dimen/result_circle"
            android:layout_height="@dimen/result_circle"
            android:layout_below="@+id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/left_rigth_margin_score_button"
            android:background="@drawable/button_bg"
            android:padding="2dp">

            <com.cricket.quiz.helper.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/result_circle"
                android:layout_height="@dimen/result_circle"

                />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLayout"
            android:layout_marginTop="@dimen/left_rigth_margin_score_button"
            android:hint="@string/name"
            android:padding="@dimen/left_rigth_margin_score_button"
            android:textColorHint="@color/gray">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/dark_blue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInName"
            android:hint="@string/mobile"
            android:padding="@dimen/left_rigth_margin_score_button"
            android:textColorHint="@color/gray">

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/dark_blue" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInMobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/circle_progress"
            android:background="@drawable/new_btn_bg"
            android:paddingEnd="@dimen/progress_h_w"
            android:paddingStart="@dimen/progress_h_w"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>