<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_bg">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_centerVertical="true"
                android:text="@string/matching_opponent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"

            android:layout_below="@id/relativeLayout"
            android:background="@drawable/drop_shadow" />

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider">

            <RelativeLayout
                android:id="@+id/timerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/dark_red"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_time_left"
                    android:layout_toEndOf="@+id/tv_time_left"
                    android:text="sec"
                    android:textColor="@color/dark_orange"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timerLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_dp"
                android:padding="8dp"
                android:text="Searching for an Opponent..."
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSearch">

                <RelativeLayout
                    android:id="@+id/cl_player1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tv_vs">


                    <android.support.v7.widget.CardView
                        android:id="@+id/layoutImg1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_dp"
                        android:layout_marginBottom="@dimen/left_rigth_margin_score_button"
                        app:cardBackgroundColor="@color/gray1"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/imgPlayer1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_margin="2dp"
                            android:contentDescription="@string/app_name"

                            app:srcCompat="@drawable/ic_profile" />
                    </android.support.v7.widget.CardView>

                    <!--         <TextView
                                 android:id="@+id/tv_player1_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/layoutImg1"
                                 android:layout_centerHorizontal="true"
                                 android:gravity="center"
                                 android:padding="8dp"
                                 android:text="@string/player_1"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp" />-->
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cl_player2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tv_vs">


                    <android.support.v7.widget.CardView
                        android:id="@+id/layoutImg2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_dp"
                        android:layout_marginBottom="@dimen/left_rigth_margin_score_button"
                        app:cardBackgroundColor="@color/gray1"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/imgPlayer2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_margin="2dp"
                            android:contentDescription="@string/app_name"
                            app:srcCompat="@drawable/ic_profile1" />
                    </android.support.v7.widget.CardView>
                    <!--

                                        <TextView
                                            android:id="@+id/tv_player2_name"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/layoutImg2"
                                            android:layout_centerHorizontal="true"
                                            android:gravity="center"
                                            android:paddingStart="10dp"
                                            android:paddingTop="8dp"
                                            android:paddingEnd="10dp"
                                            android:paddingBottom="8dp"
                                            android:text="@string/player_2"
                                            android:textColor="@color/colorPrimaryDark"
                                            android:textSize="18sp" />
                    -->

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:text="vs"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="invisible" />


            </RelativeLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentLayout"
            android:layout_marginStart="@dimen/left_rigth_margin_score_button"
            android:layout_marginEnd="@dimen/left_rigth_margin_score_button"

            android:orientation="horizontal"
            android:weightSum="5">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical">

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/colorPrimaryDark" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/gray_drop_shadow" />

                <TextView
                    android:id="@+id/tv_player1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/player_1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"

                    android:layout_marginEnd="3dp"
                    android:background="@color/colorPrimaryDark" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/gray_drop_shadow" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgVs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/vs_match" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical">

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/colorPrimaryDark" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/gray_drop_shadow" />

                <TextView
                    android:id="@+id/tv_player2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/player_2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />


                <View

                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"

                    android:layout_marginEnd="3dp"
                    android:background="@color/colorPrimaryDark" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/gray_drop_shadow" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/alertLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Oops!"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_dp"
                android:gravity="center"
                android:text="Something went wrong. please try again in sometime."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_match_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_id" />

    </RelativeLayout>
</RelativeLayout>